--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --board-width: 80vw;
+  --background-color: #212121;
+  --board-color: #303030;
+  --card-color: #424242;
+  --subtle-border-radius: 2px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
